<resources>
    <string name="app_name">Rentify</string>

    <string name="btnLogin">Login</string>
    <string name="btnSignUp">Sign Up</string>
    <string name="textViewLogin">LOGIN</string>
    <string name="textViewSignup">SIGN UP</string>

    <string name="email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_role">Role</string>
    <string name="prompt_password">Password</string>
    <string name="action_register">register</string>
    <string name="action_signin">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_email">Not a valid email</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_admin_existed">admin existed</string>
    <string name="login_failed">"Login failed"</string>
    <string name="user_exists">"username exists."</string>
</resources>